# terminal-welcome-mini-studio

./: CMakeLists.txt  LICENSE  README.md  qml.qrc  terminal-welcome-studio_pt_BR.ts
qml/: CloseBtn.qml  Content.qml  DropImage.qml  main.qml
src/: context.cpp  context.h  main.cpp
